<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/suber_duber_uber_logo" />

        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <Switch
            android:id="@+id/isDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/isDriver" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:hint="UserName" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:maxLength="14"
            android:inputType="phone" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/password_field_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/car_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_info" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/year_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:hint="Year"
            android:inputType="number" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/make_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Make" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/model_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Model" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/color_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Color" />

        <EditText
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/plate_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="License Plate" />

        <Button
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="bottom"
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:background="@drawable/button_option1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>